--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ anyhow = "1.0.98"
 async-stream = "0.3.6"
 dashmap = "6.1.0"
 futures = "0.3.31"
+rand = "0.9.1"
 reqwest = { version = "0.12.15", features = ["cookies", "json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 simd-json = "0.15.1"
+sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
 tokio = { version = "1.45.0", features = ["full"] }
